@@ -21,6 +21,10 @@ interface.
 set the number base for results and, optionally, expressions
 .PP
 .TP 8
+.B \-c, \-\-color
+use colors to hightlight different elements of expressions and results
+.PP
+.TP 8
 .B \-e, \-\-exrates
 update exchange rates
 .PP
